PR/52671: Ralph Geier: The ignorecase option is not handeled correctly in vi for unicode characters